--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,8 @@ body {
    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
    overflow: hidden;
     Transition: all 0.3s ease;
+    min-height: 300px;
+  
 }
 
 .card:hover {
@@ -75,8 +77,10 @@ body {
 
 .card img {
     width: 100%;
-    height: 150px;
+    min-height: 300px;
+    max-height: 300px;
     object-fit: cover;
+    
 }
 
 .card-content {
